--- a/src/scss/flaticon.scss
+++ b/src/scss/flaticon.scss
@@ -1,123 +1,9 @@
+    /*
+    Flaticon icon font: Flaticon
+    Creation date: 04/10/2017 03:58
+    */
 
-$secondary-blue:#006a91 !default;
-$light-blue:#bededb !default;
-$light-yellow:#f1da76 !default;
-.bg-sec-blue { background-color: $secondary-blue !important; }
-.bg-light-blue { background-color: $light-blue !important; }
-.bg-light-yellow { background-color: $light-yellow !important; }
-.text-light-blue { color: $light-blue !important; }
-.text-light-yellow { color: $light-yellow !important; }
-.navbar-brand img{ max-height: 40px;}
-body,
-html {
-  height: 100%;
-  font-family: 'Roboto', sans-serif;
-}
-h1,h2,h3{ 
-  font-weight: 100;
-}
-h4,h5,h6{ 
-  font-weight: 300;
-}
-.dark-wrapper {
-  background:rgba(1, 15, 59, 0.85);
-  width: 100%;
-  height: 100%;
-}
-
-.dark-wrapper1 {
-  background: rgba(0, 0, 0, 0.6);
-  width: 100%;
-  height: 100%;
-}
-
-.light-wrapper {
-  background: rgba(255, 255, 255, 0.7);
-  width: 100%;
-  height: 100%;
-}
-
-.pimg1,
-.pimg2,
-.pimg3 {
-  position: relative;
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  display: block;
-  background-attachment: fixed;
-  span {
-    margin: 0;
-    padding: 0;
-    font-size: 28pt;
-  }
-  p {
-    margin: 5px;
-  }
- 
-}
-
-.pimg1 {
-  background-image: url('../assets/home.jpeg');
-}
-.pimg2{
-  background-image: url('../assets/gallery3.jpeg');
-}
-
-
-.section {
-  text-align: center;
-  padding: 50px 80px;
-}
-
-.section-light {
-  background-color: #f4f4f4;
-  color: #666;
-}
-
-.section-dark {
-  background-color: #282e34;
-  color: #ddd;
-}
-
-.ptext {
-  position: relative;
-  width: 100%;
-  text-align: center;
-  color: #fff;}
-
-.ptext .border {
-  background-color: #111;
-  color: #fff;
-  padding: 20px;
-}
-
-.ptext .border.trans {
-  background-color: transparent;
-}
-
-@media(max-width:568px) {
-  .pimg1,
-  .pimg2,
-  .pimg3 {
-    background-attachment: scroll;
-  }
-  
-}
-
-.features-2 {
-  padding: 5rem 0;
-  position: relative;
-}
-.logo-invert{max-height: 25px;}
-.list-inline-item:not(:last-child) {
-  margin-right: 15px;
-}
-.calendar{
-  position:absolute;right:15px; top:45px; color: #333;
-}
-/* Flat Icon */
-@font-face {
+    @font-face {
   font-family: "Flaticon";
   src: url("Flaticon.eot");
   src: url("Flaticon.eot?#iefix") format("embedded-opentype"),
@@ -191,27 +77,3 @@ h4,h5,h6{
     $font-Flaticon-blanket: "\f111";
     $font-Flaticon-wifi: "\f112";
     $font-Flaticon-big-bottle-of-water: "\f113";
-    #glyphs {
-      border-bottom: 1px solid #ccc;
-      padding: 2em 0;
-      text-align: center;
-  }
-  .glyph {
-      display: inline-block;
-      width: 8em;
-      margin: 1em;
-      text-align: center;
-      vertical-align: top;
-      background: #FFF;
-  }
-  .glyph .glyph-icon {
-      padding: 10px;
-      display: block;
-      font-family:"Flaticon";
-      font-size: 48px;
-      line-height: 1;
-  }
-  .glyph .glyph-icon:before {
-      font-size: 48px;
-      margin-left: 0;
-  }
